flux/apps/system/envoy/proxy/gateway-class.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg-public
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
